nwe feature - lazy loading for images on table 1 and slight changes on main.js

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ START JS SCRIPTS
         <script src="./resources/dataTables.rowReorder.min.js"></script>
         <!-- Zooming Img Plugin -->
         <script src="./resources/openseadrag/openseadragon.min.js"></script>
+        <!-- lazy load for images Plugin -->
+        <script src="./resources/lozad.min.js"></script>
         <!-- Our Main Js file -->
         <script src="./resources/main.js"></script>
         <!-- Backend Js file -->
