new notification systeam has entered mathar.(cool as f*ck)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ START CSS FILES
         <link rel="stylesheet" href="resources/rowReorder.dataTables.min.css">
         <!-- Our Css Main File -->
         <link rel="stylesheet" href="./resources/style.css">
+        <!-- taoster - notifications  -->
+        <link href="./resources/toastr.min.css" rel="stylesheet"/>
         <!--==========================
 END CSS FILES
 ==========================-->
@@ -249,7 +251,7 @@ START TAB 4 CONTENT
             </div>
 
         </section>
-        <div id="ohsnap"></div>
+
         <!--==========================
 END TAB 4 CONTENT
 ==========================-->
@@ -273,14 +275,14 @@ START JS SCRIPTS
         <script src="./resources/openseadrag/openseadragon.min.js"></script>
         <!-- lazy load for images Plugin -->
         <script src="./resources/lozad.min.js"></script>
+        <!-- toastr - notifications -->
+        <script src="./resources/toastr.min.js"></script>
         <!-- Our Main Js file -->
         <script src="./resources/main.js"></script>
         <!-- Backend Js file -->
         <script src="./resources/backend.js"></script>
         <!-- Sweet Alert -->
         <script src="resources/sweetalert.js"></script>
-        <!-- Ohsnap -->
-        <script src="resources/ohsnap.min.js"></script>
 
         <!--==========================
 END JS SCRIPTS
