--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ START TAB 2 CONTENT
                     <button id="collect_data_t2" class="btn_2 icon-star-2">تكوين</button>
                 </div>
             </div>
-            <table id="empty_table" class="display table table-bordered" style="width:100%"> 
+            <table id="emptyTable" class="display table table-bordered" style="width:100%"> 
             </table>  
         </section>
         <!--==========================
@@ -241,15 +241,6 @@ END TAB 3 CONTENT
 START TAB 4 CONTENT
 ==========================-->
         <section id="section4" class="tabbed">
-
-            <div style="width: 100%;height: 100%;">
-                <div style="height: 100%;text-align: center;">
-                    <video width="420" height="340" style="top:10%;" controls>
-                        <source src="./resources/The%20Smiths%20-%20Heaven%20Knows%20I'm%20Miserable%20Now%20(Official%20Music%20Video).mp4" type="video/mp4">
-                    </video>
-                </div>
-            </div>
-
         </section>
 
         <!--==========================
@@ -267,9 +258,9 @@ START JS SCRIPTS
         <script src="./resources/bootstrap.bundle.min.js"></script>
         <!-- Tabs Plugins -->
         <script src="./resources/tabs.js"></script>
-        <!-- Data Table lib -->
+        <!-- dataTables - Data Table lib -->
         <script src="./resources/jquery.dataTables.js"></script>
-        <!-- Row Record -->
+        <!-- dataTables - Row reorder -->
         <script src="./resources/dataTables.rowReorder.min.js"></script>
         <!-- Zooming Img Plugin -->
         <script src="./resources/openseadrag/openseadragon.min.js"></script>
@@ -277,6 +268,8 @@ START JS SCRIPTS
         <script src="./resources/lozad.min.js"></script>
         <!-- toastr - notifications -->
         <script src="./resources/toastr.min.js"></script>
+        <!-- serializer - collect user inputs of forms -->
+        <script src="./resources/jquery.serializejson.min.js"></script>
         <!-- Our Main Js file -->
         <script src="./resources/main.js"></script>
         <!-- Backend Js file -->
