slight margin fix

--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@ START SETTING MODAL
                         <h4 class="modal-title" id="myModalLabel">الإعدادات</h4>
                     </div>
                     <div class="modal-body">
-                        <div class="wrapper">
+                        <div>
                             <div class="container">
-
-                                <div class="grid" style="height: 60vh;;overflow-y: scroll;">
+                                <div class="grid" style="height: 60vh;overflow-y: scroll;">
                                     <h3>عام</h3>
                                     <div class='line'></div>
                                     <div class="form-item" title='.نوع الخط المستخدم فى كتابة المسائل'>
